# solar-system-simulation

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  group-formation.txt
data/: planets.csv  points-2.vtk  points.vtk  spheres.vtp
src/: Tree_Creator.cpp  Tree_Creator.h  barnes_hut.cpp  barnes_hut.hpp  main.cpp  node.cpp  node.hpp
src/tree-elements/: Body.cpp  Body.h  BoundingBox.cpp  BoundingBox.h  Element.cpp  Element.h  body.cpp  body.h  box.cpp  box.h
src/units/: Dimension.cpp  Dimension.h  Vector.cpp  Vector.h  dimension.cpp  dimension.h  position_vector.cpp  position_vector.h
test/units/: dimension_tests.cc  position_vector.cc
test/units/dimension/: dimension_tests.cc  position_vector.cc
